# ebay_collect_api

./: .env-example copy  .gitignore  pyproject.toml
src/: app.py  main.py  schema.py
src/config/: db.py  settings.py
src/controller/: data_controller.py
src/service/: data_service.py
tests/: test_app.py  test_categories.py
