[tool.poetry]
name = "ebay-collect-api"
version = "0.1.0"
description = ""
authors = ["Ricardo Tassio Dantas <ricardotassio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.5"
ebaysdk = "^2.2.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
pandas = "^2.2.3"
pymongo = "^4.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
uvicorn = "^0.32.0"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-p no:warnings"

[tool.ruff]
line-length = 86
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT", "T"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
run = "uvicorn src.main:app --reload --port 8000"
pre_test = "task lint"
test = "pytest --cov=src -vv"
post_test = "coverage html"

lint = "ruff check src"
format = "ruff check src --fix"
pre_commit = "task lint && task format"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
